# ppp

./: .gitignore  README.md
PPP-lab01/: CMakeLists.txt  p2p.cpp
PPP-lab1/: p2p.cpp
PPP-lab2/: bcast.cpp  scatter.cpp
PPP-lab3/: CMakeLists.txt  comm.cpp
PPP-lab4/: type.cpp
PPP-lab5/: one.cpp
PPP-lab6/: CMakeLists.txt  File1.txt  File2.txt  io.cpp  lena_out.pgm
PPP-lab7/: CMakeLists.txt  File1.h5  File2.h5  hdf5.cpp
PPP-lab8/: farm.cpp  filter.filt  run-1B.sh  run-1BI.sh  run-1K.sh  run-2B.sh  run-2BI.sh  run-2K.sh  run-3B.sh  run-3K.sh  run-4B.sh  run-4K.sh
Project/: Book1.xlsx  CMakeLists.txt  build.sh  data_hybrid_2D.csv  data_mpi.csv  doc.docx  run.sh
Project/scripts/: generate_data.sh  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
Project/sources/: MaterialProperties.hpp  ParallelHeatSolver.cpp  ParallelHeatSolver.hpp  SimulationProperties.cpp  main.cpp
